finished inital styling via CSS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Code Quiz</title>
 </head>
@@ -33,10 +34,10 @@
         <article id="questions" class="hidden">
             <h2 id="question_h2">Questions</h2>
             <section class="question-buttons">
-                <button class="answer" id="answer1" data-number="1"></button>
-                <button class="answer" id="answer2" data-number="2"></button>
-                <button class="answer" id="answer3" data-number="1"></button>
-                <button class="answer" id="answer4" data-number="1"></button>
+                <button class="answer" id="answer1" data-number="1">This is a test</button>
+                <button class="answer" id="answer2" data-number="2">This is a test</button>
+                <button class="answer" id="answer3" data-number="1">This is a test</button>
+                <button class="answer" id="answer4" data-number="1">This is a test</button>
             </section>
         </article>
 
