started javascript over, added start quiz outline and made timer function

--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
             </section>
         </article>
 
-        <article id="questions" class="hidden">
-            <h2 id="question_h2">Questions</h2>
+        <article class="hidden" id="questions">
+            <h2 id="question_h2" class ="hidden">Questions</h2>
             <section class="question-buttons">
-                <button class="answer" id="answer1" data-number="1">This is a test</button>
-                <button class="answer" id="answer2" data-number="2">This is a test</button>
-                <button class="answer" id="answer3" data-number="3">This is a test</button>
-                <button class="answer" id="answer4" data-number="4">This is a test</button>
+                <button class="hidden" class="answer" id="answer1" data-number="1">This is a test</button>
+                <button class="hidden" class="answer" id="answer2" data-number="2">This is a test</button>
+                <button class="hidden" class="answer" id="answer3" data-number="3">This is a test</button>
+                <button class="hidden" class="answer" id="answer4" data-number="4">This is a test</button>
             </section>
         </article>
 
         <article id="game-over" class="hidden">
-            <input type="text" id="initials" placeholder="Type your Initials here">
-            <button class="submit_score" id="submit-button">Submit Score!</button>
-            <button class="submit-score" id="retry-button">Retry?</button>
+            <input type="text" class ="hidden" id="initials" placeholder="Type your Initials here">
+            <button class="hidden" class="submit_score" id="submit-button">Submit Score!</button>
+            <button class="hidden" class="submit-score" id="retry-button">Retry?</button>
         </article>
 
         <article class="hidden" id="wrong-or-correct">
