--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         <article class="hidden" id="questions">
             <h2 id="question_h2" class ="hidden">Questions</h2>
             <section class="question-buttons">
-                <button class="hidden" class="answer" id="answer1" data-number="1">This is a test</button>
-                <button class="hidden" class="answer" id="answer2" data-number="2">This is a test</button>
-                <button class="hidden" class="answer" id="answer3" data-number="3">This is a test</button>
-                <button class="hidden" class="answer" id="answer4" data-number="4">This is a test</button>
+                <button class="hidden answer" id="answer1" data-number="1">This is a test</button>
+                <button class="hidden answer" id="answer2" data-number="2">This is a test</button>
+                <button class="hidden answer" id="answer3" data-number="3">This is a test</button>
+                <button class="hidden answer" id="answer4" data-number="4">This is a test</button>
             </section>
         </article>
 
