added leaderboard functionality

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h2>Leaderboards</h2>
             <section id ="user-score-board">
                 <div id="initial-area">
-                    <h3>User Initals</h3>
+                    <h3>User Initials</h3>
                     <ol id="score-initials"></ol>
                 </div>
                 <div id="score-area">
